RESOLVED FIXED163160
Object.freeze() and seal() should throw if [[PreventExtensions]]() fails.
https://bugs.webkit.org/show_bug.cgi?id=163160
Summary Object.freeze() and seal() should throw if [[PreventExtensions]]() fails.
Mark Lam
Reported 2016-10-07 17:24:52 PDT
See https://tc39.github.io/ecma262/#sec-object.freeze and https://tc39.github.io/ecma262/#sec-setintegritylevel. If O.[[PreventExtensions]]() returns false, we should throw a TypeError but currently does not.
Attachments
repro test case. (696 bytes, application/x-javascript)
2016-10-07 17:26 PDT, Mark Lam
no flags
proposed patch. (9.42 KB, patch)
2016-10-07 18:18 PDT, Mark Lam
mark.lam: review-
proposed patch. (9.37 KB, patch)
2016-10-07 18:20 PDT, Mark Lam
saam: review+
Mark Lam
Comment 1 2016-10-07 17:26:58 PDT
Created attachment 290987 [details] repro test case.
Mark Lam
Comment 2 2016-10-07 18:18:19 PDT
Created attachment 290994 [details] proposed patch.
Mark Lam
Comment 3 2016-10-07 18:19:24 PDT
Comment on attachment 290994 [details] proposed patch. Bad patch. That's what I get for making last minute changes.
Mark Lam
Comment 4 2016-10-07 18:20:11 PDT
Created attachment 290996 [details] proposed patch.
Saam Barati
Comment 5 2016-10-07 18:24:54 PDT
Comment on attachment 290996 [details] proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=290996&action=review r=me > Source/JavaScriptCore/runtime/ObjectConstructor.cpp:480 > +template<IntegrityLevel level> > +bool setIntegrityLevel(ExecState* exec, VM& vm, JSObject* object) Maybe it's worth including a link to the spec here. > Source/JavaScriptCore/runtime/ObjectConstructor.cpp:496 > + if (exec->propertyNames().isPrivateName(propertyName)) You should use vm to get the PropertyNames.
Mark Lam
Comment 6 2016-10-07 20:24:14 PDT
Thanks for the review. I've made the suggested changes. Landed in r206948: <http://trac.webkit.org/r206948>.
Note You need to log in before you can comment on or make changes to this bug.