Object.freeze() and seal() should throw if [[PreventExtensions]]() fails. https://bugs.webkit.org/show_bug.cgi?id=163160

Reviewed by Saam Barati.

JSTests:

* stress/object-freeze-with-proxy-preventExtensions.js: Added.
* stress/object-seal-with-proxy-preventExtensions.js: Added.

Source/JavaScriptCore:

See https://tc39.github.io/ecma262/#sec-object.freeze,
https://tc39.github.io/ecma262/#sec-object.seal, and
https://tc39.github.io/ecma262/#sec-setintegritylevel.  We need to call
preventExtensions first before proceeding to freeze / seal the object.  If
preventExtensions fails, we should throw a TypeError.

* runtime/ObjectConstructor.cpp:
(JSC::setIntegrityLevel):
(JSC::objectConstructorSeal):
(JSC::objectConstructorFreeze):



Canonical link: https://commits.webkit.org/180996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206948 268f45cc-cd09-0410-ab3c-d52691b4dbfc